# OpenRTX

./: .astylerc  .clang-format  .gitignore  .gitmodules  .licenserc.yaml  99-openrtx.rules  AGENTS.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FINAL_SECURITY_SUMMARY.md  Makefile.arm  Makefile.x64  README.md  REUSE.toml  SECURITY_FIXES_SUMMARY.md  SECURITY_FRAMEWORK.md  cross_arm.txt  cross_arm_CM3.txt  cross_arm_CM4F.txt  cross_cm4.txt  cross_cm7.txt  cross_h8sx.txt  dynamic_security_analysis.sh  gd32f33x.cfg  improved_security_analysis.sh  k  meson.build  meson_options.txt  osx.txt  pyproject.toml  requirements.txt  run_build_c62.sh  run_security_analysis.sh  security_analysis.sh  spi_shell_additions.patch  voiceprompts.vpc  wasm.txt  west.yml
lib/: CMakeLists.txt
lib/QRCode/: qrcode.c
lib/QRCode/include/: qrcode.h
lib/minmea/: minmea.c
lib/minmea/include/: minmea.h
lib/miosix-kernel/: CMakeLists.txt  README.md  meson.build
lib/miosix-kernel/miosix/: miosix.h
lib/printf/: printf.c
lib/qdec/: license.txt  readme
lib/qdec/include/: qdec.h
lib/rtos/uC-CPU/: cpu_core.c  cpu_core.h
lib/rtos/uC-LIB/: lib_ascii.c  lib_def.h  lib_mem.c  lib_mem.h  lib_str.c
lib/zephyr/: CMakeLists.txt  prj.conf
lib/zephyr/adapters/: time.cpp
lib/zephyr/boards/: esp32s3_devkitm.overlay  ttwrplus.conf
openrtx/src/core/: CMakeLists.txt  DMRCodec.cpp  arm_math.c  audio_codec.c  audio_path.cpp  audio_stream.c  backup.c  battery.c  chan.c  cps.c  cps_io_libc.c  crc.c  crypto_utils.c  data_conversion.c  datetime.c  dsp.cpp  dstar_audio_codec.cpp  favourites.c  fm_audio_module17.cpp  framebuffer.c  gps.c  graphics.c  graphics.cpp  history.c  imbe_audio_codec.cpp  input.c  memory_profiling.cpp  noise_gate.c  nvmem_access.c  openrtx.c  queue.c  rtxlink.c  rtxlink_cat.c  rtxlink_dat.c  rtxlink_fmp.c  settings.c  slip.c  state.c  struct_slicer.c  thread_utils.c  (+8 more)
openrtx/src/ui/: CMakeLists.txt  UIStrings.c  ui.c  ui_colorpicker.c  ui_main.c  ui_menu.c  ui_mode.c  ui_strings.c  ui_test.c  ui_toolkit.cpp
platform/: CMakeLists.txt
platform/drivers/ADC/: ADC0_A36plus.c  ADC0_A36plus.h  ADC0_A36plus_f303.c  ADC0_GDx.c  ADC0_GDx.h  ADC1_MDx.c  ADC1_MDx.h  ADC1_MDxx380.c  ADC1_Mod17.c  ADC1_Mod17.h  adc_at32.c  adc_at32.h  adc_esp32.c  adc_esp32.h  adc_stm32.h  adc_stm32f4.c  adc_stm32h7.c  adc_timer_isr.c  adc_ulp_sampler.c  adc_ulp_sampler.h  adc_zephyr.c
platform/drivers/CPS/: cps_data_A36plus.h  cps_data_GDx.h  cps_data_MD3x0.h  cps_data_MDUV3x0.h  cps_io_libc.c  cps_io_native_A36plus.c  cps_io_native_GDx.c  cps_io_native_MD3x0.c  cps_io_native_MD9600.c  cps_io_native_MDUV3x0.c  cps_io_native_Mod17.c
platform/drivers/GPIO/: gpio-native.h  gpio_at32f423.c  gpio_at32f423.h  gpio_gd32.c  gpio_gd32.h  gpio_mk22.c  gpio_mk22.h  gpio_shiftReg.c  gpio_shiftReg.h  gpio_stm32.c  gpio_stm32.h
platform/drivers/GPS/: GPS.h  GPS_CS7000.cpp  GPS_MDx.c  GPS_MDx.cpp  GPS_linux.c  GPS_ttwrplus.c  gps_linux.c  gps_stm32.cpp  gps_stm32.h  gps_zephyr.c  gps_zephyr.h  nmea_rbuf.c  nmea_rbuf.h
platform/drivers/LED/: led.c  led.h
platform/drivers/NVM/: AT24Cx.h  AT24Cx_GDx.c  W25Qx.c  W25Qx.h  eeep.c  eeep.h  emulated_flash.c  emulated_flash.h  extFlash_MDx.c  extFlash_MDx.h  flash_stm32.c  flash_stm32.h  flash_stm32f4.c  flash_stm32h7.c  flash_zephyr.c  flash_zephyr.h  internal_flash.h  mcuFlash.h  mcuFlash_MDx.c  nvmData_GDx.h  nvmData_MD3x0.h  nvmData_MDUV3x0.h  nvmTypes_MD3x0.h  nvmTypes_MDUV3x0.h  nvmem_A36Plus.c  nvmem_CS7000.c  nvmem_GDx.c  nvmem_MD3x0.c  nvmem_MD9600.c  nvmem_MDUV3x0.c  nvmem_MDUV3x0G.c  nvmem_MDx.c  nvmem_Micro17.c  nvmem_Mod17.c  nvmem_Zephyr.c  nvmem_linux.c  nvmem_settings_MDx.c  nvmem_ttwrplus.c  posix_file.c  posix_file.h  (+5 more)
platform/drivers/PMU/: AXP2101_zephyr.cpp  AXP2101_zephyr.h
platform/drivers/SPI/: spi_bitbang.c  spi_bitbang.h  spi_custom.c  spi_custom.h  spi_gd32.c  spi_gd32.h  spi_mk22.c  spi_mk22.h  spi_stm32.h  spi_stm32f4.c  spi_stm32h7.c
platform/drivers/USB/: cdc-acm_descriptors.h  usb.c  usb.h  usb_MDx.cpp  usb_bsp.h  usb_bsp_MDx.c  usb_descriptors.c  usb_serial_stm32h7.c  usb_stm32f4.c
platform/drivers/audio/: Cx000_dac.cpp  Cx000_dac.h  MAX9814.h  MAX9814_Mod17.cpp  audio_A36Plus.c  audio_CS7000.cpp  audio_GDx.c  audio_MDx.c  audio_MDx.cpp  audio_Mod17.c  audio_linux.c  audio_linux.cpp  audio_ttwrplus.c  audio_zephyr.c  file_source.c  file_source.h  inputStream_GDx.c  inputStream_MDx.cpp  inputStream_Mod17.cpp  inputStream_Zephyr.cpp  inputStream_linux.c  inputStream_linux.cpp  outputStream_GDx.c  outputStream_MDx.c  outputStream_MDx.cpp  outputStream_Mod17.c  outputStream_Mod17.cpp  outputStream_Zephyr.c  outputStream_linux.c  stm32_adc.cpp  stm32_adc.h  stm32_dac.cpp  stm32_dac.h  stm32_pwm.cpp  stm32_pwm.h
platform/drivers/backlight/: backlight.h  backlight_A36Plus.c  backlight_A36Plus_f303.c  backlight_CS7000.c  backlight_GDx.c  backlight_MDx.c
platform/drivers/baseband/: AK2365A.c  AK2365A.h  AT1846S.c  AT1846S.h  AT1846S_GDx.cpp  AT1846S_SA8x8.cpp  AT1846S_UV3x0.c  AT1846S_UV3x0.cpp  AT1846S_wrapper.cpp  AT1846S_wrapper.h  HR-C5000_MD3x0.c  HR-C5000_MD3x0.h  HR_C5000.c  HR_C5000.h  HR_C5000_MDx.cpp  HR_C6000.c  HR_C6000.cpp  HR_C6000.h  HR_C6000_CS7000.cpp  HR_C6000_GDx.cpp  (+44 more)
subprojects/: CMakeLists.txt  XPowersLib.wrap  catch2.wrap  codec2.wrap  libopencm3.wrap  m17cxx.wrap  radio_tool.wrap  tinyusb.wrap
subprojects/voicePromptGenerator/: .gitignore  BuildLanguage.sh  OpenRTXVoicePromptsBuilder.py  README.md  build_all.bat
tests/unit/: APRS.cpp  APRS_packet.cpp  CMakeLists.txt  M17_callsign.cpp  M17_demodulator.cpp  M17_golay.cpp  M17_metatext.cpp  M17_opmode_sms.cpp  M17_packet.cpp  M17_packet_disassembly.cpp  M17_packet_framing.cpp  M17_rrc.cpp  M17_sms_tx.cpp  M17_viterbi.cpp  convert_minmea_coord.c  convert_minmea_coord.cpp  cps.c  cps.cpp  dsp_oversampling.cpp  dummy.c  linux_inputStream_test.cpp  m17_pkt_rx_test.cpp  m17_pkt_tx_test.cpp  pktbuf_test.cpp  play_sine.c  rtx_pktbuf_test.cpp  slip.c  test_m17mod.cpp  test_satellite.c  ui_check_standby.c  ui_check_standby.cpp  ui_common.c  voice_prompts.c
(+2591 files in other folders)
